<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">觅聊</string>

    <string name="rdo_main">嗨聊</string>
    <string name="rdo_find">发现</string>
    <string name="rdo_message">消息</string>
    <string name="rdo_me">我的</string>
    <string name="rdo_main_all">全部</string>
    <string name="rdo_main_charm">妩媚</string>
    <string name="rdo_main_sexy">性感</string>
    <string name="rdo_main_hot">劲爆</string>
    <string name="rdo_main_gentle">温柔</string>
    <string name="rdo_find_latest">最新</string>
    <string name="rdo_find_hot">热门</string>
    <string name="rdo_find_follow">关注</string>
    <string name="rdo_msg_news">消息</string>
    <string name="rdo_call_history">通话记录</string>

    <string name="title_me">我的信息</string>
    <string name="title_account_balance">账户余额</string>
    <string name="title_settings">软件设置</string>
    <string name="title_vip_center">会员中心</string>
    <string name="title_user_zone">我的动态</string>
    <string name="title_user_friend">我的好友</string>
    <string name="title_edit_user_info">个人信息</string>
    <string name="title_user_info">她的主页</string>
    <string name="title_login">用户登录</string>
    <string name="title_system_message">系统消息</string>
    <string name="title_call_in">觅聊</string>
    <string name="title_help">新手帮助</string>
    <string name="title_call_out">和她嗨聊</string>
    <string name="title_user_zone_at">的动态</string>
    <string name="title_input_name">昵称</string>
    <string name="title_input_intro">个性签名</string>
    <string name="title_select_gender">性别</string>
    <string name="title_change_avatar">更换头像</string>
    <string name="title_photo_zone">图片动态</string>
    <string name="title_voice_zone">声音动态</string>
    <string name="title_video_zone">视频动态</string>

    <string name="txt_me_login">点击登录</string>
    <string name="txt_me_account_balance">账户余额</string>
    <string name="txt_me_friend">我的好友</string>
    <string name="txt_me_zone">我的动态</string>
    <string name="txt_me_vip">VIP会员</string>
    <string name="txt_me_settings">软件设置</string>
    <string name="txt_account_balance_unit">币</string>
    <string name="txt_pay_weixin">微信支付</string>
    <string name="txt_pay_alipay">支付宝支付</string>
    <string name="txt_pay_10">10币\n10元</string>
    <string name="txt_pay_50">50币\n50元</string>
    <string name="txt_pay_98">98币\n98元</string>
    <string name="txt_pay_598">598币\n598元</string>
    <string name="txt_pay_1598">1598币\n1598元</string>
    <string name="txt_pay_input">输入钱数\n0元</string>
    <string name="txt_pay_ok">立即充值</string>
    <string name="txt_call_in_state_call">来电…</string>
    <string name="txt_call_in_state_on_the_phone">通话中…</string>
    <string name="txt_call_in_hang_up">挂断</string>
    <string name="txt_call_in_answer">接听</string>
    <string name="txt_call_out_bill_1">1.5嗨币\n通话资费（每分钟）</string>
    <string name="txt_call_out_bill_2">0.3嗨币\n平台维护费（每分钟）</string>
    <string name="txt_call_out_bill_3">1.8嗨币\n合计</string>
    <string name="txt_call_out_ont_the_phone1">系统将呼叫对方建立通话连接</string>
    <string name="txt_call_out_ont_the_phone2">正在等待对方…</string>
    <string name="txt_edit_user_info_save">保存</string>
    <string name="txt_edit_user_info_avatar">用户头像：</string>
    <string name="txt_edit_user_info_name">昵称：</string>
    <string name="txt_edit_user_info_gender">性别：</string>
    <string name="txt_edit_user_info_birthday">出生日期：</string>
    <string name="txt_edit_user_info_age">年龄：</string>
    <string name="txt_edit_user_info_location">所在城市：</string>
    <string name="txt_edit_user_info_self_intro">自我介绍：</string>
    <string name="txt_edit_user_info_select_avatar_from_camera">拍照</string>
    <string name="txt_edit_user_info_select_avatar_from_album">从手机相册中选择</string>
    <string name="txt_login_weixin">微信登录</string>
    <string name="txt_login_qq">QQ登录</string>
    <string name="txt_settings_clear_cache">清理缓存</string>
    <string name="txt_settings_help">使用帮助</string>
    <string name="txt_settings_update">软件更新</string>
    <string name="txt_settings_contact_us">联系我们</string>
    <string name="txt_settings_q_group">QQ群：534566550</string>
    <string name="txt_settings_switch_account">切换账户</string>
    <string name="txt_update_update">立即更新</string>
    <string name="txt_user_friend_follow">关注</string>
    <string name="txt_user_friend_fans">粉丝</string>
    <string name="txt_vip_member_level">会员等级：</string>
    <string name="txt_vip_remain_time">剩余时间：%s天</string>
    <string name="txt_vip_member_level_silver">白银会员（1个月¥99）</string>
    <string name="txt_vip_member_level_silver_give">赠送99个币</string>
    <string name="txt_vip_member_level_gold">黄金会员（3个月¥199）</string>
    <string name="txt_vip_member_level_gold_give">赠送199个币</string>
    <string name="txt_vip_member_level_diamond">钻石会员（12个月¥399）</string>
    <string name="txt_vip_member_level_diamond_give">赠送399个币</string>
    <string name="txt_vip_member_level_extreme">至尊皇冠（终身尊贵¥1888）</string>
    <string name="txt_vip_member_level_extreme_give">赠送1888个币</string>
    <string name="txt_vip_alipay">支付宝支付</string>
    <string name="txt_vip_weixin">微信支付</string>
    <string name="txt_vip_pay">立即充值</string>
    <string name="txt_vip_member_interest">会员特权</string>
    <string name="txt_vip_get_gold">获得金币</string>
    <string name="txt_vip_direct_message">私信聊天</string>
    <string name="txt_vip_discount">通话折扣</string>
    <string name="txt_vip_honorable">尊贵身份</string>
    <string name="txt_customer_service_title">客服</string>
    <string name="txt_customer_service_q_group">QQ群：534566550</string>
    <string name="txt_customer_service_ok">确定</string>
    <string name="txt_user_info_voice_chat">嗨聊</string>
    <string name="txt_user_info_text_chat">聊天</string>
    <string name="txt_user_info_follow">关注</string>
    <string name="txt_user_info_cancel_follow">取消关注</string>
    <string name="txt_user_info_like_chat_id">觅聊号：</string>
    <string name="txt_user_info_fans_count">粉丝：</string>
    <string name="txt_user_info_follow_count">关注：</string>
    <string name="txt_user_info_latest_news">最新动态</string>
    <string name="txt_user_info_self_intro">自我介绍</string>
    <string name="txt_user_info_call_rate">通话资费</string>
    <string name="txt_user_info_talk_time">已经通话</string>
    <string name="txt_call_history_call_in">呼入</string>
    <string name="txt_call_history_call_out">呼出</string>
    <string name="txt_call_history_miss">未接来电</string>
    <string name="txt_zone_watch">人观看</string>
    <string name="txt_zone_video_pay">私密视频，付费可%1$s可观看</string>
    <string name="txt_zone_video_price">%1$s海币</string>
    <string name="txt_zone_me">我</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_male">男</string>
    <string name="txt_female">女</string>
    <string name="txt_zone_publish">发布</string>
    <string name="txt_zone_text_add">请输入动态内容(选填)</string>
    <string name="txt_photo_selector">照片选择</string>
    <string name="txt_photo_camera">拍摄照片</string>

    <string name="img_loader_io_error">加载图片输入输出错误!</string>
    <string name="img_loader_decoding_error">加载图片解码错误!</string>
    <string name="img_loader_network_denied">加载图片网络中断!</string>
    <string name="img_loader_out_of_memory">加载图片内存不足!</string>
    <string name="img_loader_unknown_error">加载图片未知错误!</string>

    <string name="edt_hint_edit_user_info_name">请输入昵称</string>
    <string name="edt_hint_edit_user_info_gender">请选择性别</string>
    <string name="edt_hint_edit_user_info_birthday">请选择年月</string>
    <string name="edt_hint_edit_user_info_location">请选择城市</string>
    <string name="edt_hint_edit_user_info_self_intro">请填写介绍</string>
    <string name="edt_hint_input_max_len">您最多还能再输入%d个字</string>

    <string name="toast_no_sdcard">错误</string>
    <string name="toast_no_camera">错误</string>
    <string name="toast_no_album">错误</string>
    <string name="toast_update_user_info_succeed">修改个人信息成功</string>
    <string name="toast_update_user_info_failed">修改个人信息失败</string>

    <string name="notice_update_user_info">正在提交数据，请稍后</string>
</resources>
