<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/shape_gradient_title_bg">

        <TextView
            style="@style/title_text_style"
            android:text="@string/title_edit_user_info"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:clickable="true"
            android:scaleType="center"
            android:src="@drawable/btn_back_selector"/>

        <TextView
            android:id="@+id/txt_save"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/txt_edit_user_info_save"
            android:textColor="@color/text_white_selector"
            android:textSize="@dimen/txt_size_16_dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay_avatar"
        style="@style/edit_user_info_item_layout_style">

        <TextView
            android:id="@+id/txt_edit_user_info_avatar"
            style="@style/edit_user_info_item_text_style"
            android:layout_weight="1"
            android:text="@string/txt_edit_user_info_avatar"/>

        <com.audio.miliao.widget.CircleImageView
            android:id="@+id/img_avatar"
            style="@style/center_crop"
            android:src="@mipmap/ic_user"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_name"
        style="@style/edit_user_info_item_layout_style">

        <TextView
            android:id="@+id/txt_edit_user_info_name"
            style="@style/edit_user_info_item_text_style"
            android:text="@string/txt_edit_user_info_name"/>

        <TextView
            android:id="@+id/txt_edit_user_info_name_hint"
            style="@style/edit_user_info_item_edit_style"
            android:text="@string/edt_hint_edit_user_info_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_gender"
        style="@style/edit_user_info_item_layout_style">

        <TextView
            android:id="@+id/txt_edit_user_info_gender"
            style="@style/edit_user_info_item_text_style"
            android:text="@string/txt_edit_user_info_gender"/>

        <TextView
            android:id="@+id/txt_hint_edit_user_info_gender"
            style="@style/edit_user_info_item_edit_style"
            android:text="@string/edt_hint_edit_user_info_gender"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_birthday"
        style="@style/edit_user_info_item_layout_style">

        <TextView
            android:id="@+id/txt_edit_user_info_age"
            style="@style/edit_user_info_item_text_style"
            android:text="@string/txt_edit_user_info_age"/>

        <TextView
            android:id="@+id/txt_hint_edit_user_info_age"
            style="@style/edit_user_info_item_edit_style"
            android:text="@string/edt_hint_edit_user_info_birthday"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_location"
        style="@style/edit_user_info_item_layout_style">

        <TextView
            android:id="@+id/txt_edit_user_info_location"
            style="@style/edit_user_info_item_text_style"
            android:text="@string/txt_edit_user_info_location"/>

        <TextView
            android:id="@+id/txt_hint_edit_user_info_location"
            style="@style/edit_user_info_item_edit_style"
            android:text="@string/edt_hint_edit_user_info_location"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_self_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/me_item_selector"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/txt_edit_user_info_self_intro"
            style="@style/edit_user_info_item_text_style"
            android:text="@string/txt_edit_user_info_self_intro"/>

        <TextView
            android:id="@+id/txt_hint_edit_user_info_self_intro"
            style="@style/edit_user_info_item_edit_style"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:drawableRight="@null"
            android:text="@string/edt_hint_edit_user_info_self_intro"/>
    </LinearLayout>
</LinearLayout>
