<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/shape_gradient_title_bg">

        <TextView
            style="@style/title_text_style"
            android:text="@string/title_user_friend"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:clickable="true"
            android:scaleType="center"
            android:src="@drawable/btn_back_selector"/>
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdo_follow"
            style="@style/user_friend_radio_style"
            android:text="@string/txt_user_friend_follow"/>

        <RadioButton
            android:id="@+id/rdo_fans"
            style="@style/user_friend_radio_style"
            android:text="@string/txt_user_friend_fans"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#838383"/>

    <com.audio.miliao.widget.NoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </com.audio.miliao.widget.NoScrollViewPager>
</LinearLayout>
